KUBERNETES/demos/basic-deployment-affinity.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-deployment
  labels:
    app: demo-deployment
spec:
  replicas: 5
  selector:
    matchLabels:
      app.kubernetes.io/name: demo-nginx
  template:
    metadata:
      name: demo-nginx
      labels:
        app.kubernetes.io/name: demo-nginx
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: continent
                    operator: "In"
                    values: ["europe"]
      containers:
        - name: demo-nginx
          image: nginx
          ports:
            - containerPort: 80
