KUBERNETES/demos/basic-deployment-environment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-deployment
  labels:
    app: demo-deployment
spec:
  replicas: 5
  selector:
    matchLabels:
      app.kubernetes.io/name: demo-nginx
  template:
    metadata:
      name: demo-nginx
      labels:
        app.kubernetes.io/name: demo-nginx
    spec:
      containers:
        - name: demo-nginx
          image: nginx
          ports:
            - containerPort: 80
