KUBERNETES/demos/basic-deployment-volume-emptyDir.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-deployment
  labels:
    app: demo-deployment
spec:
  replicas: 5
  selector:
    matchLabels:
      app.kubernetes.io/name: demo-nginx
  template:
    metadata:
      name: demo-nginx
      labels:
        app.kubernetes.io/name: demo-nginx
    spec:
      volumes:
        - name: data-cache
          emptyDir:
            sizeLimit: "500Mi"
      containers:
        - name: demo-nginx
          image: nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - name: data-cache
              mountPath: /tmp/data
