KUBERNETES/demos/basic-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo-nginx
  labels:
    app.kubernetes.io/name: demo-nginx
spec:
  containers:
    - name: demo-nginx
      image: nginx
      ports:
        - containerPort: 80
