KUBERNETES/demos/basic-service-clusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-nginx
spec:
  selector:
    app.kubernetes.io/name: demo-nginx
  ports:
    - port: 8080
      targetPort: 80
