KUBERNETES/demos/basic-service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-svc-headless
spec:
  clusterIP: None
  selector:
    app: demo-database
  ports:
    - port: 3306
      targetPort: 3306
