KUBERNETES/demos/basic-service-loadBalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-nginx
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: demo-nginx
  ports:
    - port: 8080
      targetPort: 80
