KUBERNETES/demos/basic-service-nodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-nginx
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: demo-nginx
  ports:
    - port: 8080
      targetPort: 80
      nodePort: 31234
