KUBERNETES/demos/basic-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  labels:
    app.kubernetes.io/name: demo-ingress
spec:
  rules:
    - host: nom-domaine.com
      http:
        paths:
          - pathType: Prefix
            path: "/api"
            backend:
              service:
                name: demo-api
                port:
                  number: 3000
    - host: nom-domaine.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: demo-webserver
                port:
                  number: 80
